Added RTAB-Map theory to project memory

--- a/docs/latex/0main.tex
+++ b/docs/latex/0main.tex
@@ -76,6 +76,8 @@
 
 % To can use multirow
 \usepackage{multirow}
+\usepackage{comment}
+\usepackage{cite}
 %----------------------------------------------------------------------------------------------------------------------------------
 \begin{document}
 
@@ -84,7 +86,7 @@
 \Huge{\textbf{AMPLIACIÓN DE ROBÓTICA}} \\
 \Huge{Comparativa de técnicas de SLAM empleando un robot movil}\\
 
-\vspace{2cm}
+\vspace{1cm}
 \LARGE{Grado en Ingeniería Electrónica, Mecatrónica y Robótica}\\
 \rule{\textwidth}{0.1mm}
 \large{\tableofcontents}
@@ -99,10 +101,22 @@
 
 % %%%%%%%%%%%   INTRODUCCION %%%%%%%%%%%%%%%%%%
 \section{Introducción al proyecto}
+Pos eso,...
 
+\newpage
 \input{1hard.tex}
+
+\newpage
 \input{2soft.tex}
+
+\newpage
 \input{3slam.tex}
+
+\newpage
 \section{Referencias}
 
+\bibliography{orb_cite}
+\url{http://introlab.github.io/rtabmap/} \\
+\url{https://introlab.3it.usherbrooke.ca/mediawiki-introlab/images/7/7a/Labbe18JFR_preprint.pdf} \\
+\url{https://introlab.3it.usherbrooke.ca/mediawiki-introlab/images/b/bc/TRO2013.pdf}
 \end{document}
