--- a/docs/latex/2soft.tex
+++ b/docs/latex/2soft.tex
@@ -1,3 +1,6 @@
 \section{Software empleado en el proyecto}
 \subsection{Lo de ROS y tal}
 \subsection{Uso de librerías externas}
+
+\section{Implementación filtro estadístico}
+\subsection{Filtro de Kalman Extendido}
