--- a/docs/latex/1hard.tex
+++ b/docs/latex/1hard.tex
@@ -3,5 +3,6 @@
 \subsection{Robot movil diseñado}
 \subsection{Diseño PCB}
 \subsection{Controladores de abordo}
-\subsubsection{Raspberry Pi, Arduino, etc}
+\subsubsection{Raspberry Pi}
+\subsubsection{Arduino}
 \subsection{Cámaras empleadas}
