--- a/docs/latex/orb_cite.bib
+++ b/docs/latex/orb_cite.bib
@@ -8,3 +8,43 @@
   doi = {10.1109/TRO.2017.2705103},
   year={2017}
  }
+ @manual{atmega,
+	title		= "Atmel ATmega640 Datasheet",
+	organization	= "Atmel",
+	year		= "2014",
+	month		= "02",
+}
+@misc{rtabmap,
+  author = {IntRoLab},
+  title = {{RTAB-Map}(Real-Time Appearance-Based Mapping): {RGB-D}, Stereo and Lidar Graph-Based
+  {SLAM}},
+  year = {2014},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/introlab/rtabmap}},
+  commit = {e09a872fa2149482e0e4ae3827176c8390da8517}
+}
+@misc{PyCmdMessenger,
+  author = {Mike Harms},
+  title = {Python interface for CmdMessenger arduino serial communication library},
+  month={2},
+  year = {2017},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/harmsm/PyCmdMessenger}},
+  commit = {215d6f9402262662a14a2996f532934339639a5b}
+}
+@misc{CmdMessenger,
+  author = {Thijs Elenbaas},
+  title = {Command Messenger Communication library for Arduino & .NET},
+  month={9},
+  year = {2017},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/harmsm/PyCmdMessenger}},
+  commit = {215d6f9402262662a14a2996f532934339639a5b}
+}
+@misc{WinNT,
+  title = {Gammon Software Solutions},
+  howpublished = {\url{http://www.gammon.com.au}},
+}
