--- a/docs/latex/orb_cite.bib
+++ b/docs/latex/orb_cite.bib
@@ -12,7 +12,7 @@
 	title		= "Atmel ATmega640 Datasheet",
 	organization	= "Atmel",
 	year		= "2014",
-	month		= "02",
+	month		= "February",
 }
 @misc{rtabmap,
   author = {IntRoLab},
@@ -27,7 +27,7 @@
 @misc{PyCmdMessenger,
   author = {Mike Harms},
   title = {Python interface for CmdMessenger arduino serial communication library},
-  month={2},
+  month={February},
   year = {2017},
   publisher = {GitHub},
   journal = {GitHub repository},
@@ -36,15 +36,23 @@
 }
 @misc{CmdMessenger,
   author = {Thijs Elenbaas},
-  title = {Command Messenger Communication library for Arduino & .NET},
-  month={9},
+  title = {Command Messenger Communication library for Arduino {\&} .{NET}},
+  month={September},
   year = {2017},
   publisher = {GitHub},
   journal = {GitHub repository},
-  howpublished = {\url{https://github.com/harmsm/PyCmdMessenger}},
-  commit = {215d6f9402262662a14a2996f532934339639a5b}
+  howpublished = {\url{https://github.com/thijse/Arduino-CmdMessenger}},
+  commit = {8c3c4446fa593b8ea96a350c99aa93e7b471fc82}
 }
 @misc{WinNT,
-  title = {Gammon Software Solutions},
+  title = {Gammon Software Solutions},  
   howpublished = {\url{http://www.gammon.com.au}},
+}
+@inproceedings{MooreStouchKeneralizedEkf2014,
+  author    = {T. Moore and D. Stouch},
+  title     = {A Generalized Extended Kalman Filter Implementation for the Robot Operating System},
+  year      = {2014},
+  month     = {July},
+  booktitle = {Proceedings of the 13th International Conference on Intelligent Autonomous Systems (IAS-13)},
+  publisher = {Springer}
 }
