--- a/docs/latex/0main.tex
+++ b/docs/latex/0main.tex
@@ -101,12 +101,15 @@
 
 % %%%%%%%%%%%   INTRODUCCION %%%%%%%%%%%%%%%%%%
 \section{Introducción al proyecto}
-En este proyecto se implementan diferentes técnicas de SLAM visuales, así como diversas fuentes de odometría, sobre un robot móvil de bajo presupuesto.\par
-El robot ha sido diseñado con una topología inspirada en los vehículos de exploración espacial conocidos como \textit{rovers}, utilizando materiales y métodos de construcción asequibles y manteniendo como objetivo una sencilla sustitución e iterabilidad de cada componente. La estructura está diseñada en FreeCad y compuesta por piezas de madera mecanizadas en una cortadora láser cnc. Algunos elementos sin funcionalidad estructural, como los encoders o el soporte de la cámara, han sido fabricados mediante impresión 3D.\\
-La disposición geométrica es la de un vehículo diferencial, con tres pares de ruedas, cada una con su respectiva pareja de motor y encoder. Como drivers de los motores se han usado tres puentes H \textit{L293D} integrados en una placa de circuito impreso diseñada expresamente para ello.
-\par
-La odometría del robot se obtiene a partir de una estimación de la posición a partir de encoders ópticos, y de la velocidad y aceleración medidas por una IMU \textit{mpu-6050}. La fusión sensorial se realiza mediante un filtro de Kalman extendido, implementado en el paquete \textit{robot localization} de ROS kinetic. \\
-Las imágenes y medidas de profundidad utilizadas para las técnicas SLAM provienen de una cámara \textit{Kinect for Xbox 360} de Microsoft, que cuenta con una cámara RGB y un sensor de profundidad matricial.
+En este proyecto se implementan diferentes técnicas de SLAM visuales, así como diversas fuentes de odometría, sobre un robot móvil de bajo presupuesto. El objetivo final ha sido diseñar e implementar una plataforma de desarollo donde poder estudiar los conceptos vistos durante el curso. Para ello, y teniendo en mente el tiempo y los recursos limitados de los que se disponen, se han optado por soluciones baratas o fabricadas \textit{in-house} y de sencilla implementación para favorecer un rápido prototipado. \par
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=.6\textwidth]{images/wheele_real}
+	\caption{El robot, también conocido como \textit{Wheele}}
+\end{figure}
+El robot, o, como ha sido apodado cariñosamente; \textit{Wheele}, consta de una \textit{Raspberry Pi 3B+} como ordenador de a bordo, que hace de interfaz con la cámara, lee las medidas de los encoders y establece un bus i2c con una IMU \textit{mpu-6050}. Un microcontrolador ATmega328 de una placa Arduino, comunicado por puerto serie con la Raspberry, ejecuta un PI y actúa sobre los motores. Todo el sistema, exceptuándo el control de bajo nivel del micro, corre en ROS Kinetic, en una configuración de multi-masters que relega los procesos computacionalmente costosos (algoritmos de SLAM, data fusion...) a un portátil conectado a la Raspberry a través de una red \textit{wireless} dedicada. Como drivers para los motores se han usado tres circuitos integrados \textit{L293D} (dos puentes H por cada chip), que reciben como \textit{input} una señal generada por el micro mediante \textit{Pulse-Width Modulation}. En la sección de hardware de este mismo documento se detallan en más profundidad los sistemas electrónicos empleados, los buses de comunicaciones y se discute la estructura del robot.\par
+La odometría del robot se obtiene a partir de una estimación de la posición a partir de encoders ópticos, y de la velocidad y aceleración medidas por la IMU. La fusión sensorial se realiza con un filtro de Kalman extendido, implementado en el paquete \textit{robot localization} de ROS. El código desarollado para este proyecto y el uso de software externo es expuesto en la seccion4.  \\
+Las imágenes y medidas de profundidad utilizadas para las técnicas SLAM provienen de una \textit{Kinect for Xbox 360} de Microsoft, que cuenta con una cámara RGB y un sensor de profundidad matricial. Una breve explicación teórica de las metodologías SLAM empleadas puede encontrarse en la sección5.
 
 \newpage
 \input{1hard.tex}
