chasis + cosas en latex/sofware. correciones generales en el doc

--- a/docs/latex/1hard.tex
+++ b/docs/latex/1hard.tex
@@ -9,7 +9,7 @@ Con el fin de obtener una vista general de todo el proyecto, así como del coste
 	\item Raspberry Pi 3B+ (~30pavos). Constituye el cerebro del robot, y centraliza la comunicación con los demás sistemas. Aunque puede resultar el componente más caro del proyecto, se disponían de varias de antemano, por lo que no hubo que asumir su coste.
 	\item Kinect for Xbox 360 de Microsoft (~15pavos). Esta popular cámara merece la fama que tiene por lo asequible que es (especialmente el modelo más antiguo) y las utilidades que trae. Se demuestra como la opción más socorrida para desarollar con poco presupuesto aplicaciones que requieran de imágenes o sensores de profundidad.
 	
-
+\end{itemize}
 \subsection{Estructura}
 El robot ha sido diseñado con una topología inspirada en los vehículos de exploración espacial conocidos como \textit{rovers}, utilizando materiales y métodos de construcción asequibles y manteniendo como objetivo una sencilla sustitución e iterabilidad de cada componente. La estructura está diseñada en \textit{FreeCad} y compuesta por piezas de madera mecanizadas en una cortadora láser cnc.
 Algunos elementos sin funcionalidad estructural, como los encoders o el soporte de la cámara, han sido fabricados mediante impresión 3D.
