hw y tal. sere imbecil pero no consigo añadir una referencia

--- a/docs/latex/0main.tex
+++ b/docs/latex/0main.tex
@@ -128,6 +128,8 @@ Las imágenes y medidas de profundidad utilizadas para las técnicas SLAM provie
 \nocite{CmdMessenger}
 \nocite{WinNT}
 \nocite{atmega}
+\nocite{mpu6050_datasheet}
+\nocite{mpu6050_regmap}
 % \url{http://introlab.github.io/rtabmap/} \\
 % \url{https://introlab.3it.usherbrooke.ca/mediawiki-introlab/images/7/7a/Labbe18JFR_preprint.pdf} \\
 % \url{https://introlab.3it.usherbrooke.ca/mediawiki-introlab/images/b/bc/TRO2013.pdf}
