--- a/docs/latex/orb_cite.bib
+++ b/docs/latex/orb_cite.bib
@@ -14,6 +14,19 @@
 	year		= "2014",
 	month		= "February",
 }
+ @manual{mpu6050_datasheet,
+ 	title		= "Invensense MPU-6050 Datasheet Rev 3.4",
+ 	organization	= "Invensense",
+ 	year		= "2013",
+ 	month		= "August",
+ }
+  @manual{mpu6050_regmap,
+  	title		= "Invensense MPU-6050 Register Map Rev 4.2",
+  	organization	= "Invensense",
+  	year		= "2013",
+  	month		= "August",
+  	
+  }
 @misc{rtabmap,
   author = {IntRoLab},
   title = {{RTAB-Map}(Real-Time Appearance-Based Mapping): {RGB-D}, Stereo and Lidar Graph-Based
