--- a/docs/latex/1hard.tex
+++ b/docs/latex/1hard.tex
@@ -2,7 +2,7 @@
 Con el fin de obtener una vista general de todo el proyecto, así como del coste del mismo se lista a continuación todos los componentes del robot y su coste:
 \begin{itemize}
 	\item Chasis del vehículo. Fabricado a partir de un tablón plano de edf cortado en una cnc láser de forma gratuita gracias al Fablab de la Universidad de Sevilla en la facultad de Arquitectura.
-	\item Motores de corriente continua(~1pavos). Adquiridos a través de tiendas digitales destinadas a la importación por un módico precio, lo cual se refleja en una calidad. Sin embargo, formaban parte de un kit que incluye ruedas y acople al eje de transmisión, suponiendo un ahorro importante de tiempo y dinero. 
+	\item Motores de corriente continua(~1pavos). Adquiridos a través de tiendas digitales destinadas a la importación por un precio muy ajustado, tal y como se refleja en la calidad del producto. Sin embargo, formaban parte de un kit que incluye ruedas y acople al eje de transmisión, suponiendo un ahorro importante de tiempo y dinero. 
 	\item Encoders ópticos (~6pavos). Compuestos por un diodo emisor de luz ()comprados también en los mismos sitios web que los motores) y por un disco que interrumpe el paso del haz lumínico diseñado específicamente e impreso en 3D.
 	\item Microcontrolador ATmega328 (~10pavos). Aunque la gran parte del código implementado en el micro no utiliza las librerías de arduino, por comodidad se ha optado por un microchip ya montado en una placa tipo arduino (un modelo no oficial, clónico).
 	\item IMU mpu-6050 (~2pavos).
@@ -74,7 +74,14 @@ Como ya se ha mencionado con anterioridad, se ha escogido una IMU mpu-6050 de se
 \end{itemize}
 
 
-\subsection{Controladores de abordo}
+\subsection{Ordenador de a bordo}
+Debido a la multitud de entradas y salidas digitales y analógicas necesarias, al coste computacional de todo el sistema, y a la variedad de las comunicaciones, se plantea una configuración muy modular entre el ordenador de abordo (la \textit{Raspberry Pi}), los periféricos y la unidad de procesamiento para las partes más pesadas del software.\\
+  \begin{figure}[h!]
+  	\centering
+  	\includegraphics[width=.7\textwidth]{images/hw/wheele_esquema}
+  	\caption{Esquema de conexionado de todos los componentes}
+  \end{figure}\\
+
 \subsubsection{Raspberry Pi}
 \subsubsection{Arduino}
 \subsection{Cámaras empleadas}
